tests/knowledge/testing-accounts-data/account-data-read-only-policy/account-data/us-east-1/ec2-describe-network-interfaces.json
{
    "NetworkInterfaces": [
        {
            "Attachment": {
                "AttachTime": "2021-01-25T10:44:30+00:00",
                "AttachmentId": "eni-attach-0708ff983d2ecf5ce",
                "DeleteOnTermination": false,
                "DeviceIndex": 1,
                "InstanceOwnerId": "803884302965",
                "Status": "attached"
            },
            "AvailabilityZone": "us-east-1e",
            "Description": "AWS created network interface for directory d-9067632191",
            "Groups": [
                {
                    "GroupId": "sg-051023749a7e87df8",
                    "GroupName": "d-9067632191_controllers"
                }
            ],
            "InterfaceType": "interface",
            "Ipv6Addresses": [],
            "MacAddress": "06:d7:61:f5:42:07",
            "NetworkInterfaceId": "eni-05ee5ee29f7d15b37",
            "OwnerId": "115553109071",
            "PrivateDnsName": "ip-172-31-59-138.ec2.internal",
            "PrivateIpAddress": "172.31.59.138",
            "PrivateIpAddresses": [
                {
                    "Primary": true,
                    "PrivateDnsName": "ip-172-31-59-138.ec2.internal",
                    "PrivateIpAddress": "172.31.59.138"
                }
            ],
            "RequesterId": "803884302965",
            "RequesterManaged": true,
            "SourceDestCheck": true,
            "Status": "in-use",
            "SubnetId": "subnet-09956738",
            "TagSet": [],
            "VpcId": "vpc-bd9b60c0"
        },
        {
            "Attachment": {
                "AttachTime": "2021-01-25T11:31:41+00:00",
                "AttachmentId": "eni-attach-043639fa564237196",
                "DeleteOnTermination": false,
                "DeviceIndex": 1,
                "InstanceOwnerId": "803884302965",
                "Status": "attached"
            },
            "AvailabilityZone": "us-east-1e",
            "Description": "AWS created network interface for directory d-906765f6bf",
            "Groups": [
                {
                    "GroupId": "sg-0471cab7c3dba029e",
                    "GroupName": "d-906765f6bf_controllers"
                }
            ],
            "InterfaceType": "interface",
            "Ipv6Addresses": [],
            "MacAddress": "06:2f:40:e1:0b:3f",
            "NetworkInterfaceId": "eni-0facad931ad010784",
            "OwnerId": "115553109071",
            "PrivateDnsName": "ip-172-31-63-171.ec2.internal",
            "PrivateIpAddress": "172.31.63.171",
            "PrivateIpAddresses": [
                {
                    "Primary": true,
                    "PrivateDnsName": "ip-172-31-63-171.ec2.internal",
                    "PrivateIpAddress": "172.31.63.171"
                }
            ],
            "RequesterId": "803884302965",
            "RequesterManaged": true,
            "SourceDestCheck": true,
            "Status": "in-use",
            "SubnetId": "subnet-09956738",
            "TagSet": [],
            "VpcId": "vpc-bd9b60c0"
        },
        {
            "Attachment": {
                "AttachmentId": "ela-attach-0076f81b",
                "DeleteOnTermination": false,
                "DeviceIndex": 1,
                "InstanceOwnerId": "amazon-aws",
                "Status": "attached"
            },
            "AvailabilityZone": "us-east-1d",
            "Description": "AWS Lambda VPC ENI-custom_email_sender-dev-imanuel-117a5cd3-454b-4817-8cd8-d236e9622d83",
            "Groups": [
                {
                    "GroupId": "sg-027af7511b7f3b7f3",
                    "GroupName": "Cloudrail-dev-imanuel-Lambda-SG"
                }
            ],
            "InterfaceType": "lambda",
            "Ipv6Addresses": [],
            "MacAddress": "0e:2a:8e:20:a1:eb",
            "NetworkInterfaceId": "eni-0934cb9951924a096",
            "OwnerId": "115553109071",
            "PrivateDnsName": "ip-10-21-141-16.ec2.internal",
            "PrivateIpAddress": "10.21.141.16",
            "PrivateIpAddresses": [
                {
                    "Primary": true,
                    "PrivateDnsName": "ip-10-21-141-16.ec2.internal",
                    "PrivateIpAddress": "10.21.141.16"
                }
            ],
            "RequesterId": "AROARVZ4AQRHQQPLVYCKB:749678902839",
            "RequesterManaged": false,
            "SourceDestCheck": true,
            "Status": "in-use",
            "SubnetId": "subnet-04d441d9f2365b71a",
            "TagSet": [],
            "VpcId": "vpc-04a1c5d8672155142"
        },
        {
            "Attachment": {
                "AttachmentId": "ela-attach-5ccae159",
                "DeleteOnTermination": false,
                "DeviceIndex": 1,
                "InstanceOwnerId": "amazon-aws",
                "Status": "attached"
            },
            "AvailabilityZone": "us-east-1c",
            "Description": "AWS Lambda VPC ENI-custom_email_sender-dev-imanuel-80a124c5-49ab-4189-8975-23c91e432463",
            "Groups": [
                {
                    "GroupId": "sg-027af7511b7f3b7f3",
                    "GroupName": "Cloudrail-dev-imanuel-Lambda-SG"
                }
            ],
            "InterfaceType": "lambda",
            "Ipv6Addresses": [],
            "MacAddress": "0a:aa:51:38:85:e3",
            "NetworkInterfaceId": "eni-099832e3131f50bc9",
            "OwnerId": "115553109071",
            "PrivateDnsName": "ip-10-21-139-144.ec2.internal",
            "PrivateIpAddress": "10.21.139.144",
            "PrivateIpAddresses": [
                {
                    "Primary": true,
                    "PrivateDnsName": "ip-10-21-139-144.ec2.internal",
                    "PrivateIpAddress": "10.21.139.144"
                }
            ],
            "RequesterId": "AROARVZ4AQRHQQPLVYCKB:749678902839",
            "RequesterManaged": false,
            "SourceDestCheck": true,
            "Status": "in-use",
            "SubnetId": "subnet-05a12b58cb8bb928e",
            "TagSet": [],
            "VpcId": "vpc-04a1c5d8672155142"
        },
        {
            "Attachment": {
                "AttachTime": "2021-01-25T10:44:29+00:00",
                "AttachmentId": "eni-attach-0795b013c437c9152",
                "DeleteOnTermination": false,
                "DeviceIndex": 1,
                "InstanceOwnerId": "803884302965",
                "Status": "attached"
            },
            "AvailabilityZone": "us-east-1a",
            "Description": "AWS created network interface for directory d-9067632191",
            "Groups": [
                {
                    "GroupId": "sg-051023749a7e87df8",
                    "GroupName": "d-9067632191_controllers"
                }
            ],
            "InterfaceType": "interface",
            "Ipv6Addresses": [],
            "MacAddress": "02:3f:16:9d:3a:13",
            "NetworkInterfaceId": "eni-02456c6056bfff7d3",
            "OwnerId": "115553109071",
            "PrivateDnsName": "ip-172-31-14-222.ec2.internal",
            "PrivateIpAddress": "172.31.14.222",
            "PrivateIpAddresses": [
                {
                    "Primary": true,
                    "PrivateDnsName": "ip-172-31-14-222.ec2.internal",
                    "PrivateIpAddress": "172.31.14.222"
                }
            ],
            "RequesterId": "803884302965",
            "RequesterManaged": true,
            "SourceDestCheck": true,
            "Status": "in-use",
            "SubnetId": "subnet-3260cf54",
            "TagSet": [],
            "VpcId": "vpc-bd9b60c0"
        },
        {
            "Attachment": {
                "AttachTime": "2021-01-25T11:31:40+00:00",
                "AttachmentId": "eni-attach-01accdfdb7ee820f5",
                "DeleteOnTermination": false,
                "DeviceIndex": 1,
                "InstanceOwnerId": "803884302965",
                "Status": "attached"
            },
            "AvailabilityZone": "us-east-1a",
            "Description": "AWS created network interface for directory d-906765f6bf",
            "Groups": [
                {
                    "GroupId": "sg-0471cab7c3dba029e",
                    "GroupName": "d-906765f6bf_controllers"
                }
            ],
            "InterfaceType": "interface",
            "Ipv6Addresses": [],
            "MacAddress": "02:7a:60:a9:e2:31",
            "NetworkInterfaceId": "eni-0b0cf95404b2dd71a",
            "OwnerId": "115553109071",
            "PrivateDnsName": "ip-172-31-14-232.ec2.internal",
            "PrivateIpAddress": "172.31.14.232",
            "PrivateIpAddresses": [
                {
                    "Primary": true,
                    "PrivateDnsName": "ip-172-31-14-232.ec2.internal",
                    "PrivateIpAddress": "172.31.14.232"
                }
            ],
            "RequesterId": "803884302965",
            "RequesterManaged": true,
            "SourceDestCheck": true,
            "Status": "in-use",
            "SubnetId": "subnet-3260cf54",
            "TagSet": [],
            "VpcId": "vpc-bd9b60c0"
        },
        {
            "Attachment": {
                "AttachmentId": "ela-attach-c1ad5bd0",
                "DeleteOnTermination": false,
                "DeviceIndex": 1,
                "InstanceOwnerId": "amazon-aws",
                "Status": "attached"
            },
            "AvailabilityZone": "us-east-1b",
            "Description": "AWS Lambda VPC ENI-custom_email_sender-dev-imanuel-d1df4608-e726-41bc-8fee-e9101f094090",
            "Groups": [
                {
                    "GroupId": "sg-027af7511b7f3b7f3",
                    "GroupName": "Cloudrail-dev-imanuel-Lambda-SG"
                }
            ],
            "InterfaceType": "lambda",
            "Ipv6Addresses": [],
            "MacAddress": "12:ea:5a:48:56:c5",
            "NetworkInterfaceId": "eni-0db3478219d893abb",
            "OwnerId": "115553109071",
            "PrivateDnsName": "ip-10-21-137-83.ec2.internal",
            "PrivateIpAddress": "10.21.137.83",
            "PrivateIpAddresses": [
                {
                    "Primary": true,
                    "PrivateDnsName": "ip-10-21-137-83.ec2.internal",
                    "PrivateIpAddress": "10.21.137.83"
                }
            ],
            "RequesterId": "AROARVZ4AQRHQQPLVYCKB:749678902839",
            "RequesterManaged": false,
            "SourceDestCheck": true,
            "Status": "in-use",
            "SubnetId": "subnet-004d655196329d93a",
            "TagSet": [],
            "VpcId": "vpc-04a1c5d8672155142"
        },
        {
            "Association": {
                "AllocationId": "eipalloc-0aa74ebd8bda38f29",
                "AssociationId": "eipassoc-01263b64171866256",
                "IpOwnerId": "115553109071",
                "PublicDnsName": "ec2-54-166-49-187.compute-1.amazonaws.com",
                "PublicIp": "54.166.49.187"
            },
            "Attachment": {
                "AttachmentId": "ela-attach-a04fb8b1",
                "DeleteOnTermination": false,
                "DeviceIndex": 1,
                "InstanceOwnerId": "amazon-aws",
                "Status": "attached"
            },
            "AvailabilityZone": "us-east-1b",
            "Description": "Interface for NAT Gateway nat-0d6dceeb94081edbd",
            "Groups": [],
            "InterfaceType": "nat_gateway",
            "Ipv6Addresses": [],
            "MacAddress": "12:96:ba:5f:53:d9",
            "NetworkInterfaceId": "eni-0f52bdadb1ed94470",
            "OwnerId": "115553109071",
            "PrivateDnsName": "ip-10-21-128-150.ec2.internal",
            "PrivateIpAddress": "10.21.128.150",
            "PrivateIpAddresses": [
                {
                    "Association": {
                        "AllocationId": "eipalloc-0aa74ebd8bda38f29",
                        "AssociationId": "eipassoc-01263b64171866256",
                        "IpOwnerId": "115553109071",
                        "PublicDnsName": "ec2-54-166-49-187.compute-1.amazonaws.com",
                        "PublicIp": "54.166.49.187"
                    },
                    "Primary": true,
                    "PrivateDnsName": "ip-10-21-128-150.ec2.internal",
                    "PrivateIpAddress": "10.21.128.150"
                }
            ],
            "RequesterId": "583328430953",
            "RequesterManaged": true,
            "SourceDestCheck": false,
            "Status": "in-use",
            "SubnetId": "subnet-07b7849af809e164a",
            "TagSet": [],
            "VpcId": "vpc-04a1c5d8672155142"
        }
    ]
}
