tests/knowledge/testing-accounts-data/account-data-read-only-policy/account-data/us-east-1/ec2-describe-security-groups.json
{
    "SecurityGroups": [
        {
            "Description": "default VPC security group",
            "GroupId": "sg-00e13b0f71a1086d3",
            "GroupName": "default",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-00e13b0f71a1086d3",
                            "UserId": "115553109071"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-0c531af96a4bc4902"
        },
        {
            "Description": "Managed by Terraform",
            "GroupId": "sg-027af7511b7f3b7f3",
            "GroupName": "Cloudrail-dev-imanuel-Lambda-SG",
            "IpPermissions": [],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "Tags": [
                {
                    "Key": "Project",
                    "Value": "Cloudrail"
                },
                {
                    "Key": "Name",
                    "Value": "Cloudrail-dev-imanuel-Lambda-SG"
                },
                {
                    "Key": "Environment",
                    "Value": "dev-imanuel"
                },
                {
                    "Key": "Managed_by",
                    "Value": "terraform"
                }
            ],
            "VpcId": "vpc-04a1c5d8672155142"
        },
        {
            "Description": "AWS created security group for d-906765f6bf directory controllers",
            "GroupId": "sg-0471cab7c3dba029e",
            "GroupName": "d-906765f6bf_controllers",
            "IpPermissions": [
                {
                    "FromPort": 445,
                    "IpProtocol": "udp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 445,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 138,
                    "IpProtocol": "udp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 138,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 464,
                    "IpProtocol": "udp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 464,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 464,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 464,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 389,
                    "IpProtocol": "udp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 389,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 53,
                    "IpProtocol": "udp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 53,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 389,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 389,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 123,
                    "IpProtocol": "udp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 123,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 445,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 445,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": -1,
                    "IpProtocol": "icmp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": -1,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 3268,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 3269,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 1024,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 65535,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 88,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 88,
                    "UserIdGroupPairs": []
                },
                {
                    "IpProtocol": "-1",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-0471cab7c3dba029e",
                            "UserId": "115553109071"
                        }
                    ]
                },
                {
                    "FromPort": 135,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 135,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 636,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 636,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 53,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 53,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 88,
                    "IpProtocol": "udp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 88,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-0471cab7c3dba029e",
                            "UserId": "115553109071"
                        }
                    ]
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-bd9b60c0"
        },
        {
            "Description": "AWS created security group for d-9067632191 directory controllers",
            "GroupId": "sg-051023749a7e87df8",
            "GroupName": "d-9067632191_controllers",
            "IpPermissions": [
                {
                    "FromPort": 445,
                    "IpProtocol": "udp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 445,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 138,
                    "IpProtocol": "udp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 138,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 464,
                    "IpProtocol": "udp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 464,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 464,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 464,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 389,
                    "IpProtocol": "udp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 389,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 53,
                    "IpProtocol": "udp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 53,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 389,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 389,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 123,
                    "IpProtocol": "udp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 123,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 445,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 445,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": -1,
                    "IpProtocol": "icmp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": -1,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 3268,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 3269,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 1024,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 65535,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 88,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 88,
                    "UserIdGroupPairs": []
                },
                {
                    "IpProtocol": "-1",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-051023749a7e87df8",
                            "UserId": "115553109071"
                        }
                    ]
                },
                {
                    "FromPort": 135,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 135,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 636,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 636,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 53,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 53,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 88,
                    "IpProtocol": "udp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 88,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-051023749a7e87df8",
                            "UserId": "115553109071"
                        }
                    ]
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-bd9b60c0"
        },
        {
            "Description": "Security Group for cloudrail-dev-imanuel RDS Instance",
            "GroupId": "sg-066dcae2727b42cb5",
            "GroupName": "cloudrail-dev-imanuel-DB-SG",
            "IpPermissions": [
                {
                    "FromPort": 5432,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "10.20.0.0/20",
                            "Description": "Access from 10.20.0.0/20"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 5432,
                    "UserIdGroupPairs": [
                        {
                            "Description": "Access from Lambdas",
                            "GroupId": "sg-027af7511b7f3b7f3",
                            "UserId": "115553109071"
                        },
                        {
                            "Description": "Access from Step_Functions",
                            "GroupId": "sg-0fd0d8d546726a80d",
                            "UserId": "115553109071"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "Tags": [
                {
                    "Key": "Managed_by",
                    "Value": "terraform"
                },
                {
                    "Key": "Environment",
                    "Value": "dev-imanuel"
                },
                {
                    "Key": "Project",
                    "Value": "Cloudrail"
                },
                {
                    "Key": "Name",
                    "Value": "cloudrail-dev-imanuel-DBSG"
                }
            ],
            "VpcId": "vpc-04a1c5d8672155142"
        },
        {
            "Description": "AutoScaling-Security-Group-1 (2021-01-26T13:00:56.364Z)",
            "GroupId": "sg-07fa9e7a8d86198f6",
            "GroupName": "AutoScaling-Security-Group-1",
            "IpPermissions": [
                {
                    "FromPort": 0,
                    "IpProtocol": "icmp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": -1,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-bd9b60c0"
        },
        {
            "Description": "launch-wizard-2 created 2020-11-05T17:50:30.273+02:00",
            "GroupId": "sg-08e6d4bd0c8974903",
            "GroupName": "launch-wizard-2",
            "IpPermissions": [
                {
                    "FromPort": 3389,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 3389,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-bd9b60c0"
        },
        {
            "Description": "default VPC security group",
            "GroupId": "sg-0d2338bfa12417213",
            "GroupName": "default",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-0d2338bfa12417213",
                            "UserId": "115553109071"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-0728bc9a4de4b1d03"
        },
        {
            "Description": "launch-wizard-3 created 2021-02-01T08:21:31.616+02:00",
            "GroupId": "sg-0e26b22aceacae711",
            "GroupName": "launch-wizard-3",
            "IpPermissions": [
                {
                    "FromPort": 22,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 22,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-bd9b60c0"
        },
        {
            "Description": "default VPC security group",
            "GroupId": "sg-0ee85b077999bd139",
            "GroupName": "default",
            "IpPermissions": [],
            "IpPermissionsEgress": [],
            "OwnerId": "115553109071",
            "VpcId": "vpc-04a1c5d8672155142"
        },
        {
            "Description": "SG for Step Functions",
            "GroupId": "sg-0fd0d8d546726a80d",
            "GroupName": "Cloudrail-dev-imanuel-Step-Functions-SG",
            "IpPermissions": [
                {
                    "FromPort": 80,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 80,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "Tags": [
                {
                    "Key": "Environment",
                    "Value": "dev-imanuel"
                },
                {
                    "Key": "Name",
                    "Value": "Cloudrail-dev-imanuel-Step-Functions-SG"
                },
                {
                    "Key": "Managed_by",
                    "Value": "terraform"
                },
                {
                    "Key": "Project",
                    "Value": "Cloudrail"
                }
            ],
            "VpcId": "vpc-04a1c5d8672155142"
        },
        {
            "Description": "default VPC security group",
            "GroupId": "sg-37970008",
            "GroupName": "default",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-37970008",
                            "UserId": "115553109071"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "115553109071",
            "VpcId": "vpc-bd9b60c0"
        }
    ]
}
